--- a/MixologistGui/gui/StartDialog.ui
+++ b/MixologistGui/gui/StartDialog.ui
@@ -6,26 +6,26 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>200</width>
-    <height>315</height>
+    <width>225</width>
+    <height>350</height>
    </rect>
   </property>
   <property name="sizePolicy">
-   <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
+   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
     <horstretch>0</horstretch>
     <verstretch>0</verstretch>
    </sizepolicy>
   </property>
   <property name="minimumSize">
    <size>
-    <width>200</width>
-    <height>315</height>
+    <width>225</width>
+    <height>350</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>200</width>
-    <height>16777215</height>
+    <width>225</width>
+    <height>350</height>
    </size>
   </property>
   <property name="palette">
@@ -91,9 +91,6 @@
      </colorrole>
     </disabled>
    </palette>
-  </property>
-  <property name="font">
-   <font/>
   </property>
   <property name="contextMenuPolicy">
    <enum>Qt::NoContextMenu</enum>
