--- a/MixologistGui/gui/Preferences/ServerDialog.ui
+++ b/MixologistGui/gui/Preferences/ServerDialog.ui
@@ -490,7 +490,7 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
    <item>
-    <widget class="QGroupBox" name="groupBox_3">
+    <widget class="QGroupBox" name="connectionBox">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
        <horstretch>0</horstretch>
@@ -533,7 +533,7 @@
         <item>
          <widget class="QCheckBox" name="randomizePorts">
           <property name="text">
-           <string>Randomize Port on Startup</string>
+           <string>Randomize Port Every Startup</string>
           </property>
           <property name="checked">
            <bool>true</bool>
@@ -555,90 +555,43 @@
         </item>
        </layout>
       </item>
-     </layout>
-    </widget>
-   </item>
-   <item>
-    <widget class="QGroupBox" name="groupBox">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
-     </property>
-     <property name="title">
-      <string>Network Configuration (takes effect after restart)</string>
-     </property>
-     <layout class="QVBoxLayout">
       <item>
-       <layout class="QHBoxLayout">
+       <layout class="QHBoxLayout" name="horizontalLayout_3">
         <item>
-         <layout class="QVBoxLayout">
-          <item>
-           <widget class="QLabel" name="label">
-            <property name="text">
-             <string>Local Address</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QLabel" name="label_2">
-            <property name="text">
-             <string>External Address</string>
-            </property>
-           </widget>
-          </item>
-         </layout>
+         <widget class="QLabel" name="portLabel">
+          <property name="text">
+           <string>Port Number</string>
+          </property>
+         </widget>
         </item>
         <item>
-         <layout class="QGridLayout">
-          <item row="0" column="0">
-           <widget class="QLineEdit" name="localAddress"/>
-          </item>
-          <item row="0" column="1">
-           <widget class="QLabel" name="label_5">
-            <property name="text">
-             <string>Port:</string>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="2">
-           <widget class="QSpinBox" name="localPort">
-            <property name="minimum">
-             <number>0</number>
-            </property>
-            <property name="maximum">
-             <number>65535</number>
-            </property>
-            <property name="value">
-             <number>1680</number>
-            </property>
-           </widget>
-          </item>
-          <item row="1" column="0">
-           <widget class="QLineEdit" name="extAddress"/>
-          </item>
-          <item row="1" column="1">
-           <widget class="QLabel" name="label_4">
-            <property name="text">
-             <string>Port:</string>
-            </property>
-           </widget>
-          </item>
-          <item row="1" column="2">
-           <widget class="QSpinBox" name="extPort">
-            <property name="minimum">
-             <number>0</number>
-            </property>
-            <property name="maximum">
-             <number>65535</number>
-            </property>
-            <property name="value">
-             <number>1680</number>
-            </property>
-           </widget>
-          </item>
-         </layout>
+         <widget class="QSpinBox" name="portNumber">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="maximum">
+           <number>65535</number>
+          </property>
+          <property name="value">
+           <number>0</number>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <spacer name="horizontalSpacer">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
         </item>
        </layout>
       </item>
@@ -714,7 +667,7 @@
     </widget>
    </item>
    <item>
-    <widget class="QGroupBox" name="NetConfigBox_2">
+    <widget class="QGroupBox" name="remoteBox">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
        <horstretch>0</horstretch>
@@ -773,11 +726,6 @@
    </item>
   </layout>
  </widget>
- <tabstops>
-  <tabstop>localAddress</tabstop>
-  <tabstop>localPort</tabstop>
-  <tabstop>extPort</tabstop>
- </tabstops>
  <resources/>
  <connections/>
 </ui>
