--- a/MixologistGui/gui/Preferences/ServerDialog.ui
+++ b/MixologistGui/gui/Preferences/ServerDialog.ui
@@ -502,6 +502,13 @@
      </property>
      <layout class="QVBoxLayout" name="verticalLayout">
       <item>
+       <widget class="QCheckBox" name="disableAutoConfig">
+        <property name="text">
+         <string>Turn off connection auto-config</string>
+        </property>
+       </widget>
+      </item>
+      <item>
        <layout class="QHBoxLayout" name="horizontalLayout_3">
         <item>
          <widget class="QLabel" name="portLabel">
@@ -578,13 +585,6 @@
          </size>
         </property>
        </spacer>
-      </item>
-      <item>
-       <layout class="QVBoxLayout" name="_3">
-        <item>
-         <layout class="QHBoxLayout" name="_4"/>
-        </item>
-       </layout>
       </item>
      </layout>
     </widget>
