Improvement: Changed uploads display to a flat list from the tree structure for a cleaner look

--- a/MixologistGui/gui/TransfersDialog.ui
+++ b/MixologistGui/gui/TransfersDialog.ui
@@ -596,6 +596,9 @@
          <property name="verticalScrollMode">
           <enum>QAbstractItemView::ScrollPerPixel</enum>
          </property>
+         <property name="itemsExpandable">
+          <bool>false</bool>
+         </property>
          <property name="sortingEnabled">
           <bool>true</bool>
          </property>
@@ -703,6 +706,15 @@
          </property>
          <property name="verticalScrollMode">
           <enum>QAbstractItemView::ScrollPerPixel</enum>
+         </property>
+         <property name="indentation">
+          <number>20</number>
+         </property>
+         <property name="rootIsDecorated">
+          <bool>false</bool>
+         </property>
+         <property name="itemsExpandable">
+          <bool>false</bool>
          </property>
          <property name="sortingEnabled">
           <bool>true</bool>
