Improvement: Can now change connection settings without restarting, will automatically restart connection configuration

--- a/MixologistGui/gui/Preferences/ServerDialog.ui
+++ b/MixologistGui/gui/Preferences/ServerDialog.ui
@@ -498,7 +498,7 @@
       </sizepolicy>
      </property>
      <property name="title">
-      <string>Connection (takes effect after restart)</string>
+      <string>Connection (will restart connection)</string>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout">
       <item>
