--- a/MixologistGui/gui/images.qrc
+++ b/MixologistGui/gui/images.qrc
@@ -41,5 +41,6 @@
         <file>Images/AnimatedLoading.gif</file>
         <file>Images/StatusConnected.png</file>
         <file>Images/StatusSearching.gif</file>
+        <file>Images/RestartConnection.png</file>
     </qresource>
 </RCC>
