Improvement: Changed the port number back to showing at all times so it can be used a reference, whether or not advanced is enabled

--- a/MixologistGui/gui/Preferences/ServerDialog.ui
+++ b/MixologistGui/gui/Preferences/ServerDialog.ui
@@ -513,7 +513,7 @@
         <item>
          <widget class="QLabel" name="portLabel">
           <property name="text">
-           <string>Port Number</string>
+           <string>Your Port Number</string>
           </property>
          </widget>
         </item>
