--- a/MixologistGui/gui/Preferences/GeneralDialog.ui
+++ b/MixologistGui/gui/Preferences/GeneralDialog.ui
@@ -555,6 +555,9 @@ p, li { white-space: pre-wrap; }
         <property name="wordWrap">
          <bool>true</bool>
         </property>
+        <property name="margin">
+         <number>10</number>
+        </property>
        </widget>
       </item>
       <item>
