Improvement: Mixologist can now queue suggestions, and when a friend comes online, will send the suggestion to them

--- a/MixologistGui/gui/TransfersDialog.ui
+++ b/MixologistGui/gui/TransfersDialog.ui
@@ -752,6 +752,16 @@
            <string>LibraryMixer ID</string>
           </property>
          </column>
+         <column>
+          <property name="text">
+           <string>Item Type</string>
+          </property>
+         </column>
+         <column>
+          <property name="text">
+           <string>Item ID</string>
+          </property>
+         </column>
         </widget>
        </item>
       </layout>
