--- a/MixologistGui/gui/Preferences/TransfersPrefDialog.ui
+++ b/MixologistGui/gui/Preferences/TransfersPrefDialog.ui
@@ -519,6 +519,13 @@
         </property>
        </widget>
       </item>
+      <item row="1" column="0">
+       <widget class="QCheckBox" name="linksAsk">
+        <property name="text">
+         <string>Ask before launching mixology links clicked from your browser</string>
+        </property>
+       </widget>
+      </item>
      </layout>
     </widget>
    </item>
